<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/quote_item_horizontal_padding"
    android:paddingEnd="@dimen/quote_item_horizontal_padding">

    <TextView
        android:id="@+id/symbol"
        style="@style/StockSymbolTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        tools:text="@string/quote_item_design_symbol"
        android:contentDescription="@string/list_item_quote_symbol"
        />

    <!--Width is hard-coded due to suggested performance improvement.-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end">

        <TextView
            android:id="@+id/price"
            style="@style/BidPriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/quote_item_price_horizontal_margin"
            android:layout_marginStart="@dimen/quote_item_price_horizontal_margin"
            tools:text="@string/quote_item_design_price"
            android:contentDescription="@string/list_item_quote_price"
            />

        <TextView
            android:id="@+id/change"
            style="@style/PercentChangeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/percent_change_pill_green"
            android:paddingStart="@dimen/quote_item_price_change_horizontal_margin"
            android:paddingEnd="@dimen/quote_item_price_change_horizontal_margin"
            tools:text="@string/quote_item_design_percent_change"
            android:contentDescription="@string/list_item_quote_percent_changed"
            />
    </LinearLayout>
</LinearLayout>
