<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.udacity.stockhawk.ui.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/swipe_an_entry_to_the_side_to_delete_it_from_the_list"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/list_of_stock_quotes"
            />

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_layout_margin"
        android:onClick="button"
        android:src="@drawable/fab_plus"
        app:backgroundTint="@color/material_blue_500"
        app:borderWidth="@dimen/fab_border_width"
        app:elevation="@dimen/fab_elevation"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/fab_pressed_translation_z"
        android:contentDescription="@string/floating_action_button_to_add_a_new_stock"
        />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:visibility="gone"
        android:contentDescription="@string/error_message_control"
        tools:text="@string/error_message_control" />
</merge>
